--- a/_config.yml
+++ b/_config.yml
@@ -1,24 +1,29 @@
-author: Andy # 作者
-description: Andy's blog
+author: whjin # 作者
+description: whjin's blog
 keyword: hexo-theme, vuejs
 favicon: 
 
 excerpt_link: 阅读全文
 
 menu:
- Home: /
- Tags: /tags/
- Archives: /archives/
- Projects: /project/
- About: /about/
+ 首页: /
+ 归档: /archives
+ 标签: /tags
+ 项目: /project
+ 关于: /about
 
 # highlight
 highlight:
-  tomorrow
+#  default
+#  foundation
+  idea
+#  github
+#  vs
+#  tomorrow
 
-baidu_id:
+baidu_id: 7176d0bc67fb19a89fea168ac922b24e
 
 about: 
   banner: https://i.imgur.com/YT9F84p.jpg
   avatar: https://i.imgur.com/MytU5HF.png
-  description: 雅致寓于高阁渔舟唱晚，古典悠然；格调外发园林绿树萦绕，馥郁清香。
+  description: 雅致寓于高阁渔舟唱晚，古典悠然<br/>格调外发园林绿树萦绕，馥郁清香
