--- a/_config.yml
+++ b/_config.yml
@@ -1,21 +1,21 @@
 author: whjin # 作者
 description: whjin's blog
 keyword: hexo-theme, vuejs
-favicon: 
+favicon:
 
 excerpt_link: 阅读全文
 
 menu:
- 首页: /
- 归档: /archives
- 标签: /tags
- 项目: /project
- 关于: /about
+  首页: /
+  归档: /archives/
+  标签: /tags/
+  项目: /project/
+  关于: /about/
 
 # highlight
 highlight:
-#  default
-#  foundation
+  #  default
+  #  foundation
   idea
 #  github
 #  vs
@@ -23,7 +23,5 @@ highlight:
 
 baidu_id: 7176d0bc67fb19a89fea168ac922b24e
 
-about: 
-  banner: https://i.imgur.com/YT9F84p.jpg
-  avatar: https://i.imgur.com/MytU5HF.png
-  description: 雅致寓于高阁渔舟唱晚，古典悠然<br/>格调外发园林绿树萦绕，馥郁清香
+about:
+  description: 雅致寓于高阁渔舟唱晚，古典悠然；格调外发园林绿树萦绕，馥郁清香。
