--- a/_config.yml
+++ b/_config.yml
@@ -21,6 +21,16 @@ highlight:
 #  vs
 #  tomorrow
 
+valine:
+  enable: true
+  appId: 9Y9fUh0rr3StVKSING2lDixH-gzGzoHsz
+  appKey: H0nOdiUHT7y5pXYxJBTdUq8X
+  notify: true
+  placeholder: Just go go
+  avatar: mp
+  enableQQ: true
+  cdn: //unpkg.com/valine/dist/Valine.min.js # /script/Valine.min.js # https://cdn.jsdelivr.net/npm/valine
+
 baidu_id: 7176d0bc67fb19a89fea168ac922b24e
 
 about:
