--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ valine:
   appId: 9Y9fUh0rr3StVKSING2lDixH-gzGzoHsz
   appKey: H0nOdiUHT7y5pXYxJBTdUq8X
   notify: true
-  placeholder: Just go go
+  placeholder: 
   avatar: mp
   enableQQ: true
   cdn: //unpkg.com/valine/dist/Valine.min.js # /script/Valine.min.js # https://cdn.jsdelivr.net/npm/valine
